MPS-20726 Don't use SolutionKind for ExtensionRegistry