@@ -21,8 +21,7 @@ import jetbrains.mps.components.ComponentHost;
 import jetbrains.mps.components.CoreComponent;
 import jetbrains.mps.logging.Logger;
 import jetbrains.mps.module.ReloadableModule;
-import jetbrains.mps.project.Solution;
-import jetbrains.mps.smodel.Language;
+import jetbrains.mps.project.SModuleOperations;
 import jetbrains.mps.smodel.structure.ExtensionDescriptor;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -47,12 +46,12 @@ public class ExtensionRegistry extends BaseExtensionRegistry implements CoreComp
   private final DeployListener myClassesListener = new DeployListener() {
 
     @Override
-    public void onUnloaded(Set<ReloadableModule> unloadedModules, @NotNull ProgressMonitor monitor) {
+    public void onUnloaded(@NotNull Set<ReloadableModule> unloadedModules, @NotNull ProgressMonitor monitor) {
       unloadExtensionDescriptors(unloadedModules, monitor);
     }
 
     @Override
-    public void onLoaded(Set<ReloadableModule> loadedModules, @NotNull ProgressMonitor monitor) {
+    public void onLoaded(@NotNull Set<ReloadableModule> loadedModules, @NotNull ProgressMonitor monitor) {
       loadExtensionDescriptors(loadedModules, monitor);
     }
   };
@@ -111,39 +110,15 @@ public class ExtensionRegistry extends BaseExtensionRegistry implements CoreComp
   }
 
   private ExtensionDescriptor findExtensionDescriptor(SModule mod) {
-    if (mod instanceof Language) {
-      return findLanguageExtensionDescriptor((Language) mod);
-    } else if (mod instanceof Solution) {
-      switch (((Solution) mod).getKind()) {
-        case PLUGIN_CORE:
-        case PLUGIN_EDITOR:
-        case PLUGIN_OTHER:
-          return findPluginSolutionExtensionDescriptor((Solution) mod);
-
-        default:
-          break;
+    if (mod instanceof ReloadableModule && SModuleOperations.canSupplyExtensionsForMPS(mod)) {
+      // TODO: more flexible way of loading extensions from a module
+      String namespace = mod.getModuleName();
+      String className = namespace + ".plugin.ExtensionDescriptor";
+      Object compiled = getObjectByClassName(className, (ReloadableModule) mod);
+      if (compiled instanceof ExtensionDescriptor) {
+        return (ExtensionDescriptor) compiled;
       }
-    }
-    return null;
-  }
-
-  private ExtensionDescriptor findPluginSolutionExtensionDescriptor(Solution solution) {
-    // TODO: more flexible way of loading extensions from plugin solution
-    String namespace = solution.getModuleName();
-    String className = namespace + ".plugin.ExtensionDescriptor";
-    Object compiled = getObjectByClassName(className, solution);
-    if (compiled instanceof ExtensionDescriptor) {
-      return (ExtensionDescriptor) compiled;
-    }
-    return null;
-  }
-
-  private ExtensionDescriptor findLanguageExtensionDescriptor(Language lang) {
-    String namespace = lang.getModuleName();
-    String className = namespace + ".plugin.ExtensionDescriptor";
-    Object compiled = getObjectByClassName(className, lang);
-    if (compiled instanceof ExtensionDescriptor) {
-      return (ExtensionDescriptor) compiled;
+      return null;
     }
     return null;
   }
@@ -151,8 +126,8 @@ public class ExtensionRegistry extends BaseExtensionRegistry implements CoreComp
   @Nullable
   private static Object getObjectByClassName(String className, ReloadableModule module) {
     try {
-      Class clazz = module.getOwnClass(className);
-      return clazz.newInstance();
+      Class<?> clazz = module.getOwnClass(className);
+      return clazz.getDeclaredConstructor().newInstance();
     } catch (Throwable e) {
       LOG.trace("error loading class\"" + className + "\"", e);
     }
